[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.27451, 0.521569, 1, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Skip" type="Button" parent="."]
margin_left = 56.0
margin_top = 704.0
margin_right = 256.0
margin_bottom = 832.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "SKIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Match" type="Button" parent="."]
margin_left = 320.0
margin_top = 704.0
margin_right = 520.0
margin_bottom = 832.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "ACT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameText" type="Label" parent="."]
margin_top = 56.0
margin_right = 576.0
margin_bottom = 384.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionText" type="Label" parent="."]
margin_top = 536.0
margin_right = 576.0
margin_bottom = 632.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenBar" type="ProgressBar" parent="."]
margin_left = 8.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 88.0
custom_styles/fg = SubResource( 3 )
max_value = 10.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OxygenBar"]
margin_top = -48.0
margin_right = 216.0
custom_fonts/font = ExtResource( 2 )
text = "Oxygen"

[node name="ItemList" type="Label" parent="."]
margin_top = 872.0
margin_right = 576.0
margin_bottom = 1024.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="Match" to="." method="_on_Match_pressed"]
